# sp1-tee-private-proving

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  README.md  docker-compose.yml  docker-compose.yml.basic  docker-compose.yml.custom-domain  docker-compose.yml.example  justfile
crates/types/: Cargo.toml  build.rs
crates/types/src/: artifact.rs  key.rs  lib.rs  request.rs
crates/types/src/proto/: types.rs
crates/utils/: Cargo.toml
crates/utils/src/: artifacts.rs  lib.rs  retry.rs  signable.rs
proto/: private.proto  types.proto
