[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]

# Shared dependencies
anyhow = "1.0.98"
axum = "0.7.9"
bincode = "1.3.3"
crossbeam = "0.8.4"
dotenv = "0.15.0"
futures = "0.3"
lru = "0.16.0"
mti = "1.0.0"
reqwest = "0.12.23"
rustls = "0.23.31"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.40", features = ["derive", "env"] }
tracing = "0.1.41"
thiserror = "2.0.12"

# Workspace
sp1-tee-private-types = { path = "./crates/types" }
sp1-tee-private-utils = { path = "./crates/utils" }

# SP1
sp1-sdk = { version = "5.2.1", features = ["network", "native-gnark"] }
sp1-prover = { version = "5.2.1" }
sp1-core-executor = { version = "5.2.1" }
spn-artifacts = { git = "https://github.com/succinctlabs/network" }
spn-utils = { git = "https://github.com/succinctlabs/network" }

# Alloy
alloy-primitives = { version = "1.2.1", features = ["rand"] }

# Prost
prost-types = "0.13.0"
prost-build = "0.13.0"
prost = "0.13.0"

# Tonic
tonic = { version = "0.12" }
tonic-build = "0.12.0"

[patch.crates-io]
# sp1-sdk = { path = "../sp1/crates/sdk" }
# sp1-prover = { path = "../sp1/crates/prover" }
# sp1-core-executor = { path = "../sp1/crates/core/executor" }

sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "aurelien/gro2-723-add-new-apis-for-private-proving-to-sp1" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", branch = "aurelien/gro2-723-add-new-apis-for-private-proving-to-sp1" }
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1.git", branch = "aurelien/gro2-723-add-new-apis-for-private-proving-to-sp1" }
